--- a/r_api/dockerfile
+++ b/r_api/dockerfile
@@ -1,15 +1,16 @@
-# start the image
-FROM rocker/r-ver:3.5.0
+# Start with a base R image
+FROM rocker/r-ver:4.2.1
 
+# Install required packages
+RUN apt-get update -qq && apt-get install -y \
+      libssl-dev \
+      libcurl4-gnutls-dev
+      
 RUN useradd -ms /bin/bash admin
 
-# install the linux libraries needed fro plumber
-RUN apt-get update -qq && apt-get install -y \
-libssl-dev \
-libcurl4-gnutls-dev
-
-# install plumber
+# Install packages from CRAN and GitHub
 RUN R -e "install.packages('plumber')"
+RUN R -e "install.packages('readr')"
 
 # copy everything from the current directory into the container
 COPY --chmod=0755 / /app 
@@ -24,5 +25,5 @@ ENV PATH="$PATH:/app/normalization_pipeline"
 # open port 80 to traffic
 EXPOSE 80
 
-# when the container starts, star the main.R script
+# when the container starts, star the main.R script 
 ENTRYPOINT ["Rscript", "main.R"]
